fix: adjusted fullscreen image behaviour for correct alignment and responsiveness

--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,10 @@
   border: 0;
   box-sizing: bord-box;
 }
-/* 
-main {
-  height: 100vh;
-  width: 100vw;
-  display: grid;
-  grid-template-rows: 2fr 3fr 36fr;
-  grid-template-columns: 1fr 3fr 1fr;
-} */
 
 body {
   display: grid;
-  grid-template-rows: 1fr 2fr 18fr;
+  grid-template-rows: 1fr 2fr 18fr 6fr;
   grid-template-columns: 2fr 1fr 4fr 1fr 2fr;
   height: 100vh;
   width: 100vw;
@@ -34,13 +26,13 @@ body {
   object-fit: cover;
   overflow: hidden;
   position: relative;
+  justify-content: center;
 }
 
 #thumbnail-container {
   z-index: 2;
   display: flex;
   gap: 5px;
-  /* justify-content: space-evenly; */
   height: 80px;
   width: 50vw;
   grid-row-start: 2;
@@ -83,9 +75,9 @@ img {
 
 #fullscreen-container > img {
   margin: auto;
-  min-width: 100vw;
+  width: 100vw;
   min-height: 100vh;
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
 }
 
